// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render _override props 1`] = `
<div
  class="components-olaf wp-components-olaf olaf css-1nqjm19"
  data-g2-c16t="true"
  data-g2-component="Olaf"
>
  Warm Hugs!
</div>
`;

exports[`props should render context props 1`] = `
<div
  class="components-olaf wp-components-olaf css-1nqjm19"
  data-g2-c16t="true"
  data-g2-component="Olaf"
>
  Warm Hugs
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="components-olaf wp-components-olaf css-1nqjm19"
  data-g2-c16t="true"
  data-g2-component="Olaf"
/>
`;

exports[`props should render css props + provided css 1`] = `
<div
  class="components-olaf wp-components-olaf olaf css-y278hy"
  data-g2-c16t="true"
  data-g2-component="Olaf"
/>
`;

exports[`props should render css props 1`] = `
<div
  class="components-olaf wp-components-olaf olaf css-er5ts4"
  data-g2-c16t="true"
  data-g2-component="Olaf"
/>
`;
